			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * PORT: Better check for GMP support, better message if GMP is not found
    and cleanup of test-suite to skip all GMP dependent tests if GMP is
    not present.

  * MODIFIED: Renamed library(netscape) into library(www_browser).  Extended
    and modernised browser detection.  Now also works on MacOSX.

  * ADDED: Allow calling PL_new_functor() before PL_initialise().


================================
VERSION 5.6.3 (January 19, 2006)
================================

  * FIXED: unify_with_occurs_check/2 fails to to occurs-check with
    attributed variables.  Tom Schrijvers.

  * FIXED: Thread resource exception handling in Linux 2.6.  Keri Harris.

================================
VERSION 5.6.2 (January 13, 2006)
================================

  * FIXED: writing of escape sequences for representation_errors(prolog)
    on streams.  Also fixed reading of '\x61\' and similar sequences.
    Pierre Nugues.

  * FIXED: Make thread time statistics work properly in Linux 2.6 kernels.
    Also some cleanup of the statistics code.

  * FIXED: Bind prolog flag system_thread_id to the thread identifier on
    Linux in 2.6 kernels.

  * FIXED: readline signal interaction (causes problems in alarm/4).

  * FIXED: Bug#134: left-shift (<<) hitting 64-bit boundary.  Holger
    Kanwischer.

  * FIXED: Bug#133: reading non-decimal numbers that do not fit in 64-bit.
    Holger Kanwischer.

  * FIXED: Bug#132: radix domain checking for format/3 using ~r.
    Holger Kanwischer.

================================
VERSION 5.6.1 (January 10, 2006)
================================

  * CLEANUP: Various type issues.  Peter Ludemann.

  * FIXED: Bug#131: error handling in lock-option of open/4.
    Holger Kanwischer.
