@@ -7,6 +7,9 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ENHANCED: Better error messages if locale cannot represent filenames.
+    Richard O'Keefe.
+
   * PORT: Better check for GMP support, better message if GMP is not found
     and cleanup of test-suite to skip all GMP dependent tests if GMP is
     not present.
